fix comment style having wrong wrap style

--- a/app/assets/styles/cards.css
+++ b/app/assets/styles/cards.css
@@ -186,7 +186,7 @@
   }
 
   .comment-text {
-    white-space: pre;
+    white-space: pre-wrap;
     /* pre-line only displays line feeds and not spaces:
     white-space: pre-line;
     */
